trait-xml/tests/fail/const_generic_noname.rs
trait_xml::trait_xml! {
    <trait>
        <name>Foo</name>
        <bounds>
            <const>
                <type>u8</type>
            </const>
        </bounds>
    </trait>
}

fn main() {}
